--- a/src/main/resources/templates/REPORTES/reporte.html
+++ b/src/main/resources/templates/REPORTES/reporte.html
@@ -84,7 +84,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary m-t-15 waves-effect">ENVIAR</button>
+                                    <button type="submit" class="btn btn-primary m-t-15 waves-effect" style="width: 100%;">GENERAR REPORTE</button>
                                 </div>
                             </form>                           
                         </div>
