--- a/src/main/resources/templates/formCliente.html
+++ b/src/main/resources/templates/formCliente.html
@@ -88,6 +88,16 @@
                                     </div>
                                 </div>-->
                                 <div class="alert alert-danger text-center">
+                                    <strong>FECHA REGISTRO DE SERVICIO </strong>
+                                </div>
+                                <label >FECHA SERVICIO</label>
+                                <div>
+                                    <div class="form-line">
+                                        <input type="Date" rows="1" name="fecha_servicio" class="form-control no-resize" style="text-transform:uppercase" required>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="alert alert-danger text-center">
                                     <strong>PROCEDENCIA</strong>
                                 </div>
                                 <label >PROCEDENCIA DE ENTREGA</label>
