--- a/src/main/resources/templates/INFORMES/Reporte_Informe_Baja.html
+++ b/src/main/resources/templates/INFORMES/Reporte_Informe_Baja.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="layaut/layaut :: head"></head>
+<head th:replace="layaut/layaut :: head">
+    <link href="../../../../css/sweetalert2.min.css" rel="stylesheet">
+
+</head>
 
 <body class="theme-red">
     <!-- Page Loader -->
